--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ figure {
     font-size: 15px;
     text-align: center;
     font-weight: 400;
-    color: rgba(0, 0, 0, 0.5);
+    color: #2c98f0;
     padding: 0 20px;
     width: 100%; }
     @media screen and (max-width: 768px) {
