--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,8 @@ figure {
     font-weight: 400;
     color: #2c98f0;
     padding: 0 20px;
+    text-decoration: none;
+    outline: none;
     width: 100%; }
     @media screen and (max-width: 768px) {
       #colorlib-aside .colorlib-footer {
