playing with nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,10 @@ figure {
   max-width: 1170px;
   margin: 0 auto; }
 
+.border {
+  height: 100%;
+}
+
 #colorlib-main {
   width: calc(100% - 300px);
   float: right;
